popover: Prevent text-overflow in user-card-popover.
To prevent text overflow in 'user-card-popover', we have already
set the width to 240px for the class 'message-info-popover' or
'user-info-popover'. However, this fix only works on large screens
with a width greater than 768px, as 'message-info-popover' does not
require any background overlay for large screens. This container
contains the user card. On small screens, we want the background
overlay, so we set the width to 100% for 'message-info-popover',
allowing it to expand to full screen in order to show the background
overlay. However, in this case, 'popover-inner' becomes the parent
of 'user-card-popover', which holds the card. Setting the width to
240px for the 'popover-inner' class for screens with a width less
than 768px fixes the text overflow issue.

--- a/web/styles/popovers.css
+++ b/web/styles/popovers.css
@@ -608,6 +608,7 @@ ul {
 
         .popover-inner {
             background-color: hsl(0deg 0% 100%);
+            width: 240px;
         }
     }
 
